--- a/History.txt
+++ b/History.txt
@@ -1,4 +1,7 @@
-== 0.0.1 2008-12-15
+== 0.0.1 2008-12-21
 
-* 1 major enhancement:
-  * Initial release
+* First rubyforge release:
+  * Config file support
+  * ARGV parsing
+    * Alternate receipt path
+    * Forced outdated list
