--- a/History.txt
+++ b/History.txt
@@ -1,3 +1,8 @@
+== 0.0.2 2008-12-23
+
+* Second rubyforge release:
+  * Bundle with my own gem of bz2 library as libbz2 0.4 isn't building properly
+
 == 0.0.1 2008-12-21
 
 * First rubyforge release:
