Formatting fixes to README.rdoc.

--- a/README.rdoc
+++ b/README.rdoc
@@ -16,15 +16,15 @@ A clean way to keep your MacPorts up to date.
 Updates your MacPorts while also removing old dependent versions of libraries and applications.
 
 == SYNOPSIS:
-  0) Install a port_upgrade config file into ~/.port_upgrade.conf, 
-     a sample is included with the gem (optional)
-  1) Update your ports database from macports.org
-  sudo port selfupdate (or sync)
-  2) Run port_upgrade to generate a shell script
-  port_upgrade -output upgrade.sh
-  3) Run the shell script to update your ports tree
-  sudo ./upgrade.sh
-  4) There is no step 4
+
+* Install a port_upgrade config file into ~/.port_upgrade.conf, a sample is included with the gem (optional)
+* Update your ports database from macports.org
+  * sudo port selfupdate (or sync)
+* Run port_upgrade to generate a shell script
+  * port_upgrade -output upgrade.sh
+* Run the shell script to update your ports tree
+  * sudo ./upgrade.sh
+* There is no step 4
 
 == REQUIREMENTS:
 
